--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -15534,6 +15534,28 @@ YJH，我说得直一点。
 
 
 
+503、中霖 | 《革命与恋爱问题》
+酒色财气，古人称之为“人生四戒”
+
+——
+
+丁亮老师课上有感：成为大人是不断扩大自己的极端，但又要能回到中道上面，就能越长越大。还有李步进老师说，要学到天理上去，活到日常中来。我要向这个方向努力。
+
+——
+
+“她是你，失去的背影，你因她，而得以完整。踏上大人王者之路。”
+
+——
+
+现代人把我们人人本有、天生的那一点灵光给丢掉了，而我们就是要活出中国人的精气神！义勇。突然想到了王镇华老师的一幅作品，印象深刻——“精足，气定，神闲。”
+
+——
+
+这几日，丁亮老师将“风”的正与变阐明，即如何面对人生第一个正大的开始，如何“好好谈恋爱”。《诗经》开篇《关雎》，很美好，很善良，可前提是要先成为“君子”“淑女”，唯仁者，能爱人，能恶人。为何有这四个正大的开始？一个人本就要长成大人，如何通过恋爱这段因缘，让自己长得更大。实际不只是恋爱一事，好像当热爱一事一物之时，时常也会由着这些因缘，将自己的生命伸展开来，原先不及处，可以随着这份热爱的力量，逐渐长养出来。故究竟而言，所谓恋爱的学习绝对不离日常的学习，其真正衍射的是，如何让这样的上天的力量，帮助我们过好日子，好好地爱这个世界，好好爱眼前之人。这样并不局限于男女欢爱之中，而是透过正男女之道，连接到生命根本的成长当中去。能好好地爱一个人，是某种程度上的一种果，代表着人格的独立不依——这个是根本。由此出发看待因缘，哪怕再不如意，天没有塌下来，该怎么过还是要怎么过，并且要好好地过。这般，生命尽美，而因缘尽善矣。
+https://mp.weixin.qq.com/s/Im7djR4X8zVaRUEmnnx7NQ
+
+
+
 终
 
 
@@ -15552,7 +15574,7 @@ YJH，我说得直一点。
 
 logging  
 
-202602161857 创作者YJH 完成终极版
+202602171513 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
