--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -15548,7 +15548,31 @@ YJH，我说得直一点。
 
 
 
-504、中霖 | 《革命与恋爱问题》
+504、杨澜：对呀，到最后都老了也不结婚的。
+
+黎明：哦，不要紧，反正我觉得，人 生活得快乐就可以。因为结婚所以不结婚在我来讲，我相信我是需要结婚的，但不是现在。
+
+杨澜：你是觉得自己没有准备好，还是说觉得没有合适的人？
+
+黎明：两方面都有。
+
+选择爱一个人，选择新的挑战，选择为自己而活，选择说不。这个总是生怕一低下头就让脆弱走漏了风声的神秘男子，不知不觉已经在娱乐圈中行走了20年。或许你永远无法真正猜透他的内心所想，然而也正是这份固执的保留，不合拍的神秘，让黎明在人人张扬真我风采的今天显得特立独行。于是不喜欢他的人依然会冷眼相看，而爱他的人则会一如既往。
+
+杨澜：所以你觉得最刻骨铭心的是那一段吗？往后的倒反而没有那样的投入和受伤。
+
+黎明：不是，我我觉得女孩子跟男孩子不一样，我觉得女孩子的爱情是最深刻的应该是初恋。男孩子最深刻的应该是最后一个。
+
+杨澜：最后一个，最后一个还没有到。
+
+黎明：还没有到。对，所以说不出来。但是我追女孩子是初恋，我不知道认不认同。
+
+- [《杨澜访谈录》最特立独行的天王？黎明首谈鲜为人知的感情观 |#杨澜 #黎明 #杨澜访谈录 |杨澜工作室Yang Lan Studio - YouTube]
+
+https://www.youtube.com/watch?v=CG3IRxB3f6Q
+
+
+
+505、中霖 | 《革命与恋爱问题》
 酒色财气，古人称之为“人生四戒”
 
 ——
@@ -15588,7 +15612,7 @@ https://mp.weixin.qq.com/s/Im7djR4X8zVaRUEmnnx7NQ
 
 logging  
 
-202602212002 创作者YJH 完成终极版版
+202602212002 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
