--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -15572,7 +15572,21 @@ https://www.youtube.com/watch?v=CG3IRxB3f6Q
 
 
 
-505、中霖 | 《革命与恋爱问题》
+505、宇宙间人的生灭，犹如大海中的波涛的起伏。大波小波，无非海的变幻，无不归元于海，世间一切现象，皆是宇宙的大生命的显示。阿难！你我的情缘并不淡薄，你就是我，我就是你；无所谓你我了！
+
+- [心安，一切皆安（丰子恺的生命智慧） - 阿难 - 丰子恺 - 微信读书]
+
+https://weread.qq.com/web/reader/c8b32220813ab7f43g0129a8kd3d322001ad3d9446802347
+
+我认同丰子恺的生命智慧，认为宇宙间人的生灭如大海波涛起伏，皆是大生命的显示；并推崇一种超越个体界限、物我合一的情缘观，追求“你就是我，我就是你”的无分别境界。
+
+你从来没有离开我，我也从来没有失去你。
+
+万物一体。
+
+
+
+506、中霖 | 《革命与恋爱问题》
 酒色财气，古人称之为“人生四戒”
 
 ——
@@ -15594,6 +15608,12 @@ https://mp.weixin.qq.com/s/Im7djR4X8zVaRUEmnnx7NQ
 
 
 
+507、500、爱恨之外，更有辽阔天地。
+
+人生辽阔，不要只活在爱恨里面。
+
+
+
 终
 
 
@@ -15612,7 +15632,7 @@ https://mp.weixin.qq.com/s/Im7djR4X8zVaRUEmnnx7NQ
 
 logging  
 
-202602212002 创作者YJH 完成终极版
+202602231353 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
