--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -15608,9 +15608,12 @@ https://mp.weixin.qq.com/s/Im7djR4X8zVaRUEmnnx7NQ
 
 
 
-507、500、爱恨之外，更有辽阔天地。
+507、507、如何内心强大，可以尝试这五种方法
+杨凤池老师
+https://mp.weixin.qq.com/s/GcO4tfD43SRVfdxn8_PGZw
+所以要做到修心，修的就是三个字：不当真。念头不当真，经历不当真，爱恨不当真，甚至修到最后，生死也不当真。
 
-人生辽阔，不要只活在爱恨里面。
+不当真就不会执着，不执着自然不会有烦恼，只是扎根于觉知当中，允许一切流过当下，心不取相，如如不动。
 
 
 
@@ -15632,7 +15635,7 @@ https://mp.weixin.qq.com/s/Im7djR4X8zVaRUEmnnx7NQ
 
 logging  
 
-202602231353 创作者YJH 完成终极版
+202602232142 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
