--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -15608,7 +15608,7 @@ https://mp.weixin.qq.com/s/Im7djR4X8zVaRUEmnnx7NQ
 
 
 
-507、507、如何内心强大，可以尝试这五种方法
+507、如何内心强大，可以尝试这五种方法
 杨凤池老师
 https://mp.weixin.qq.com/s/GcO4tfD43SRVfdxn8_PGZw
 所以要做到修心，修的就是三个字：不当真。念头不当真，经历不当真，爱恨不当真，甚至修到最后，生死也不当真。
@@ -15617,7 +15617,14 @@ https://mp.weixin.qq.com/s/GcO4tfD43SRVfdxn8_PGZw
 
 
 
-508、世间所有的相遇，都是久别重逢。那世间所有的别离呢？
+508、#解放你自己
+《燕园拾尘  北大生命成长手记》 -- 王曙光著 -- 2017
+
+在我看来，千代野的开悟所蕴含的隐喻是异常丰富的，她为我们提供了一个意味深远的启示：生命不但未从丧失中崩溃，反而从丧失中得到超脱与解悟，得到生命自身的某种升华。竹编的水桶箍不会永远坚韧，木桶中的月亮不可能永远圆满如昔，但当木桶崩塌的刹那，千代野却获得了心灵的空前超脱。那种原本给她带来巨大的震惊与恐惧的尘俗中的变故，那些曾经或许令她苦痛与焦虑的遭遇，此时却开启了她面向人生解悟的又一面明澈的窗户。当她坦然面对这些生命中“必要的丧失”的时候，她或许会理解到“失去”原是另一种更具隐喻性和幽默感的获得，“崩溃”原是另外一种更为坚定和睿智的再建的前奏。我们正是从不断的丧失之中得到生命本该体悟的神性的训诚；它并非恶意地隐藏在我们意料不到的灾难、危机、挣扎与苦涩的果核里，以我们必然领受的命运的方式逼使我们服从生命本身的节奏。正如朱迪思·维奥斯特(Judith Viorst)在《必要的丧失》( Necessary Losses)的副标题中所揭示的：“爱，梦幻，依赖和不能实现的期望，所有我们为成长所必须放弃的。”这是一对近乎残酷的然而都是真实存在的生存悖论——丧失与自我完成——我们总是在丧失中成长，完成一次对自我精神与生存理念的扬弃，如同一只蝉从温柔的蛹中蜕变而出，或是一只蝴蝶冲破茧丝的重重包裹而达成痛苦而辉煌的质变。
+
+
+
+509、世间所有的相遇，都是久别重逢。那世间所有的别离呢？
 
 这句话极具禅意和美感，既然“相遇”是“久别重逢”，那么按照这个逻辑的对称性，“世间所有的别离，都是为了更好的重逢。”
 
@@ -15660,7 +15667,7 @@ https://mp.weixin.qq.com/s/GcO4tfD43SRVfdxn8_PGZw
 
 logging  
 
-202602242024 创作者YJH 完成终极版
+202602271342 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
