--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -15649,6 +15649,42 @@ https://mp.weixin.qq.com/s/GcO4tfD43SRVfdxn8_PGZw
 
 
 
+510、三联生活周刊《少年新知》杂志2023年3月
+
+陈祉妍 Chen Zhiyan
+北京大学心理系临床心理学博士，中国科学院心理研究所心理健康重点实验室教授。
+
+爱情：人生的一堂必修课
+相爱时的狂喜是因为自我扩大了，相应地，失恋时的痛苦是因为自我缩小了。
+
+根据埃里克森的人生发展阶段理论，爱情是青年阶段的心理发展任务，这个阶段的开启年龄大致是18岁。不过，开启这一阶段，年龄并非主要标志，而是需要先完成前一阶段：
+确立自我同一性。也就是说，知道“我是谁”“我要什么样的人生”—如果你不知道自己会走怎样的道路，你怎样来选择同路人呢？
+
+认识自我，为适合自己的爱情打下基础。与此同时，爱情其实是让你更深入地认识自己的机会。在爱情里，一个人会“失去”自己又重新“发现”自己。“失去”是因为你会放下自己的一些执念，愿意改变。原本悲观的人会学习怎样变得更加积极，原本恐高的人会愿意陪喜欢的人坐过山车。你会因为爱他，作为一个爱整洁的人去容忍他的混乱；也会因为爱他，作为一个不在意混乱的人去多注意一点整洁。当你尝试改变，你“发现”了新的自己。但不止如此。在心理健康比较正常的情况下，你会发现，就算爱情有排山倒海之力，你却仍然保有自己的底线，不能因为爱情而放弃。你再次发现了更深层的自己。当然，有时也会出现另一种情况：在爱情里你才发现自己病得不轻。
+
+爱情既可以让人宛若新生，又可以让人痛不欲生。对于爱情如此重要的影响，心理学家对爱情的研究真是远远不够。也有些人对研究爱情颇有顾虑，觉得爱情怎么可以用科学来指导呢？难道不应该完全顺其自然吗？在我看来，这是一种对未知力量的敬畏。就像古时候人不知道什么时候下雨，不知道为何会出现日食，所以又迷信又敬畏。
+
+关于爱情最为著名的理论可能要数美国心理学家罗伯特•斯滕伯格的爱情三元论（圆满的爱情由亲密、激情、承诺三个成分组成，想了解多一些，可以上网检索。中文检索“爱情三元论”、英文检索 Sternberg’s triangular theory oflove）。但我最喜欢的爱情理论则是亚瑟•阿伦的自我扩展理论。你有没有听说过让陌生人爱上彼此的36个问题？听起来着实像野鸡心理学，但其实是这位心理学家基于研究设计的一组问题。如果一对陌生男女按照这组问题交谈，必定会由浅入深地接触彼此的内心。例如，从“你最不喜欢自己外貌的哪个部分？”到“有什么事是你一直梦想去做而没有做的，为什么没有呢？”。当然不是只要两个人一起聊聊这组问题就会相爱，但它至少可以让我们判断对方是不是值得进一步交往。我更觉得我们应该与自己身边重要的人一起聊聊这些重要的问题。常常会发生这样的事：我们在生活中长日相伴，却没有坐下来好好地聊一聊彼此的内心。
+
+自我扩展理论认为，爱情的重要动力之一就是通过亲密关系扩展自己。当我们与另一个人相爱，他的财富、能力、观点都会成为“我”的一部分。我们融为一体，他的就是我的，我的就是他的。无论是智慧、财富、力量，爱人的优势都会成为我的一部分，让我变得更丰富、更强大。
+
+基于这个理论，我们可以更好地分析爱情的发生、发展和结束。我们会爱什么样的人？一个经典的问题就是：“到底该找一个相似的人，还是一个互补的人？”根据自我扩展理论，伴侣越是和自己不同，带来的自我扩展也就会越多。然而，适应各种“不同”也是一种挑战。相似的人虽然不能带来那么多的自我扩展，但是越是相似越有助于稳定和幸福。因此在相似和互补之间有一个合适的度，而这个度对每个人来说可能不一样。有的人更愿意从不同的人身上去学习，也乐于开放地改变自己，他们可能更适应与自己差异较多的伴侣。接纳与自己的不同，而不简单地认为自己的观点更对、方式更好，是一种心理能力。这种心理能力越强，一个人就越能够适应与自己不同的人。
+
+根据自我扩展理论，最吸引我们的人，拥有着我们的“理想自我”的特征。人有我无，同时我还很向往。那我就觉得他很好，我可能会爱上他。比如说，我作为一个社恐，渴望能在人际交往中谈吐自如，于是我有意无意地希望寻找这样一个伴侣：他和陌生人聊天从不紧张，和店员砍价得心应手，维护自己的利益时既自信又得体。同样的道理，一个人如果觉得自己学习不好、文化不够，就会渴慕学习好、有文化的人——当他成为我的一部分，我也整个儿变好了。
+
+自我扩展理论可以指导爱情的发展。它强调的是两个人要一起创造更多新鲜的经历，这才是爱情常新的秘诀。这样做的情侣和夫妻能常常为感情添砖加瓦，两个人会更加幸福。
+
+自我扩展理论同样解释了失恋的痛苦。当我们感到爱情关系不再促进我的自我扩展，甚至阻碍自我扩展的时候，我会想要离开这份关系。但当所爱之人离开我们的时候，我们会感到深深的痛苦。相爱时的狂喜是因为自我扩大了，相应地，失恋时的痛苦是因为自我缩小了。甚至可以说，我的一部分被切掉了，留下半个我，带着流血的伤口。
+
+诗人说，爱情是人生的建筑，一旦坍塌，残砖断瓦都落在心间。失恋的打击有让人陷入抑郁的风险。我们做过关于青少年恋爱的调查，发现过去一年有过恋爱经历的青少年抑郁情绪会更重一些，最主要的原因是在青少年时期恋爱关系常常不太稳定，同时他们对自我的认识不那么坚固，所以关系破裂会对一个人的自我价值感产生巨大的打击。可以想象，当你爱一个人，重视他，对他好，花很多时间和他在一起，最终他却离开了你。他是如此重要，又对你如此了解，却做出了这样的选择，当然是对自我价值感一次巨大的打击。坚实的自我价值感往往来自于成功经验的累积，而青少年太年轻了，还没有累积到足够多、足够丰富的经验，所以常常难以承受这么巨大的打击。
+
+那么我们要如何应对失恋呢？失恋确实痛苦，但也是可以“科学”度过的。如果一个人继续追求自我扩展，而不再依赖于原来的爱人，让自己生活丰富起来，就会更快地治愈自己。
+也许在恋爱时为了更多腻在一起，会放弃一些自己想学、想做的事，这时候正好做起来。
+
+那么，自我扩展一定都是关于好的方面吗？如果是，那恐怕就无法解释为什么有些人会找那么不靠谱的对象。为什么有些人会专门找个对象来骂自己？为什么有些人会专门找成天让自己着急上火的爱人呢？这是因为爱情既受到意识影响，又受到无意识的影响。除了我们知道自己想要的“理想自我”，还有我们不知道但在内心深处却感到不能缺失的东西。所以不用担心科学研究会让爱情失去神秘，因为对于我们每个人而言，爱情总有一部分力量在我们的意识之外。
+
+
+
 终
 
 
@@ -15667,7 +15703,7 @@ https://mp.weixin.qq.com/s/GcO4tfD43SRVfdxn8_PGZw
 
 logging  
 
-202602271342 创作者YJH 完成终极版
+202603011942 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
